...
            android:gravity="start"
            android:layout_marginLeft="@dimen/marginLogo"
            android:text="@string/gasoleoa"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGasoleoA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLabelsPrecio"
            android:layout_toRightOf="@+id/textViewGasoleoALabel" />

        <TextView
...
            android:layout_marginLeft="@dimen/marginLogo"
            android:layout_toRightOf="@+id/textViewGasoleoA"
            android:text="@string/gasolina95"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGasolina95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLabelsPrecio"
            android:layout_toRightOf="@+id/textViewGasolina95Label" />

    </RelativeLayout>
...
